--- a/tagsync/pom.xml
+++ b/tagsync/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>ranger</artifactId>
         <groupId>org.apache.ranger</groupId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1-TDP-0.1.0-SNAPSHOT</version>
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
