--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
         <googlecode.log4jdbc.version>1.2</googlecode.log4jdbc.version>
         <gson.version>2.2.4</gson.version>
         <guice.version>4.0</guice.version>
-        <hadoop.version>3.1.1</hadoop.version>
+        <hadoop.version>3.1.1-TDP-0.1.0-SNAPSHOT</hadoop.version>
 	<ozone.version>0.4.0-alpha</ozone.version>
         <hamcrest.all.version>1.3</hamcrest.all.version>
         <hbase.version>2.0.2</hbase.version>
