hbase-agent: add junit dependency

--- a/hbase-agent/pom.xml
+++ b/hbase-agent/pom.xml
@@ -33,6 +33,12 @@
     </parent>
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
             <version>${hbase.version}</version>
