--- a/hive-agent/pom.xml
+++ b/hive-agent/pom.xml
@@ -31,6 +31,11 @@
         <relativePath>..</relativePath>
     </parent>
     <dependencies>
+	<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
