hbase-agent: add explicit hbase-common dependency

--- a/hbase-agent/pom.xml
+++ b/hbase-agent/pom.xml
@@ -102,6 +102,19 @@
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-common</artifactId>
+            <version>${hbase.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-common</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-zookeeper</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
