--- a/hbase-agent/pom.xml
+++ b/hbase-agent/pom.xml
@@ -37,7 +37,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
+	<dependency>
+	    <groupId>com.sun.jersey</groupId>
+	    <artifactId>jersey-client</artifactId>
+	    <version>${sun-jersey-client.version}</version>
+	    <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
