--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
         <sqoop.version>1.99.7</sqoop.version>
         <storm.version>1.2.0</storm.version>
         <sun-jersey-bundle.version>1.19</sun-jersey-bundle.version>
+        <sun-jersey-client.version>1.19</sun-jersey-client.version>
         <tomcat.embed.version>7.0.94</tomcat.embed.version>
         <velocity.version>1.7</velocity.version>
         <zookeeper.version>3.4.14</zookeeper.version>
