--- a/hbase-agent/pom.xml
+++ b/hbase-agent/pom.xml
@@ -39,8 +39,8 @@
         </dependency>
 	<dependency>
 	    <groupId>com.sun.jersey</groupId>
-	    <artifactId>jersey-client</artifactId>
-	    <version>${sun-jersey-client.version}</version>
+	    <artifactId>jersey-bundle</artifactId>
+	    <version>${sun-jersey-bundle.version}</version>
 	    <scope>compile</scope>
         </dependency>
         <dependency>
