pom.xml: hbase.version to 2.1.10-TDP-0.1.0-SNAPSHOT

--- a/hive-agent/pom.xml
+++ b/hive-agent/pom.xml
@@ -112,6 +112,11 @@
             <version>${hadoop.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <testResources>
