--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
         <hadoop.version>3.1.1-TDP-0.1.0-SNAPSHOT</hadoop.version>
 	<ozone.version>0.4.0-alpha</ozone.version>
         <hamcrest.all.version>1.3</hamcrest.all.version>
-        <hbase.version>2.0.2</hbase.version>
+        <hbase.version>2.1.10-TDP-0.1.0-SNAPSHOT</hbase.version>
         <hive.version>3.1.3-TDP-0.1.0-SNAPSHOT</hive.version>
         <hbase-shaded-protobuf>2.0.0</hbase-shaded-protobuf>
         <hbase-shaded-netty>2.0.0</hbase-shaded-netty>
