--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,8 @@
         <jsr250.version>1.0</jsr250.version>
         <jsr305.version>1.3.9</jsr305.version>
         <junit.version>4.13.1</junit.version>
-        <kafka.version>2.8.1</kafka.version>
+        <kafka.version>3.2.1-TDP-0.1.0-SNAPSHOT</kafka.version>
+        <kafka.scala.binary.version>2.13</kafka.scala.binary.version>
         <kerby.version>1.0.0</kerby.version>
         <knox.gateway.version>1.4.0</knox.gateway.version>
         <kylin.version>3.1.3</kylin.version>
@@ -524,6 +525,7 @@
                 <module>ranger-util</module>
                 <module>plugin-kafka</module>
                 <module>ranger-kafka-plugin-shim</module>
+                <module>distro</module>
             </modules>
         </profile>
         <profile>
