--- a/dev-support/ranger-docker/.env
+++ b/dev-support/ranger-docker/.env
@@ -3,7 +3,7 @@ SKIPTESTS=true
 GIT_URL=https://github.com/apache/ranger.git
 BRANCH=master
 
-RANGER_VERSION=3.0.0-SNAPSHOT
+RANGER_VERSION=3.0.0-TDP-0.1.0-SNAPSHOT
 HADOOP_VERSION=3.3.0
 HBASE_VERSION=2.2.6
 HIVE_VERSION=3.1.2
