--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     </parent>
     <groupId>org.apache.ranger</groupId>
     <artifactId>ranger</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-TDP-0.1.0-SNAPSHOT</version>
     <description>Security for Enforcing Enterprise Policies</description>
     <packaging>pom</packaging>
     <name>ranger</name>
@@ -525,6 +525,8 @@
                 <module>ranger-util</module>
                 <module>plugin-kafka</module>
                 <module>ranger-kafka-plugin-shim</module>
+                <module>plugin-elasticsearch</module>
+                <module>ranger-elasticsearch-plugin-shim</module>
                 <module>distro</module>
             </modules>
         </profile>
